push alll the go

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -31,7 +31,14 @@
 }
 
 #paragraph{
-   /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
    font-size: large;
 }
+
+
+/* ---------help to slow AOS better------------- */
+[data-aos][data-aos][data-aos-duration= "5000"]{
+    transition-duration: 5000ms;
+}
+
+
 
